{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 65,
  "lineage": "6282a6dc-3af8-5ee7-a450-c55889f9f7d5",
  "resources": [
    {
      "module": "module.alb_ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:462096274659:loadbalancer/app/libraryhub-prod-ec2-alb/8494a4a89df17734",
            "arn_suffix": "app/libraryhub-prod-ec2-alb/8494a4a89df17734",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "libraryhub-prod-ec2-alb-185669618.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:462096274659:loadbalancer/app/libraryhub-prod-ec2-alb/8494a4a89df17734",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "libraryhub-prod-ec2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0325d69d8b1b36619"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003dcb21ec3441a2a"
              },
              {
                "subnet_id": "subnet-0b4c24841e2bb5310"
              }
            ],
            "subnets": [
              "subnet-003dcb21ec3441a2a",
              "subnet-0b4c24841e2bb5310"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2-alb",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2-alb",
              "Project": "libraryhub"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:462096274659:listener/app/libraryhub-prod-ec2-alb/8494a4a89df17734/db11481cdd7a2d2f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:462096274659:targetgroup/libraryhub-prod-ec2-alb-tg/5ad9ab9f496738f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:462096274659:listener/app/libraryhub-prod-ec2-alb/8494a4a89df17734/db11481cdd7a2d2f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:462096274659:loadbalancer/app/libraryhub-prod-ec2-alb/8494a4a89df17734",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_ec2.aws_lb.main",
            "module.alb_ec2.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb_ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:462096274659:targetgroup/libraryhub-prod-ec2-alb-tg/5ad9ab9f496738f3",
            "arn_suffix": "targetgroup/libraryhub-prod-ec2-alb-tg/5ad9ab9f496738f3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/libraryhub/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:462096274659:targetgroup/libraryhub-prod-ec2-alb-tg/5ad9ab9f496738f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:462096274659:loadbalancer/app/libraryhub-prod-ec2-alb/8494a4a89df17734"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "libraryhub-prod-ec2-alb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2-alb-tg",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2-alb-tg",
              "Project": "libraryhub"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:security-group/sg-0325d69d8b1b36619",
            "description": "Part 2: internet to EC2 ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0325d69d8b1b36619",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "libraryhub-prod-alb-ec2-sg",
            "name_prefix": "",
            "owner_id": "462096274659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-alb-ec2-sg",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-alb-ec2-sg",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:security-group/sg-0ea97060bdb28641c",
            "description": "Part 1: Beanstalk ALB to PHP instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea97060bdb28641c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "libraryhub-prod-beanstalk-sg",
            "name_prefix": "",
            "owner_id": "462096274659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-beanstalk-sg",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-beanstalk-sg",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:security-group/sg-06dbd5dedadf8c476",
            "description": "Part 2: EC2 ALB to Tomcat instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dbd5dedadf8c476",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Tomcat from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0325d69d8b1b36619"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "libraryhub-prod-ec2-sg",
            "name_prefix": "",
            "owner_id": "462096274659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2-sg",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2-sg",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_ec2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:security-group/sg-051992d8579b2c5ac",
            "description": "RDS: from EC2 and Beanstalk SGs only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051992d8579b2c5ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from app tier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06dbd5dedadf8c476",
                  "sg-0ea97060bdb28641c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "libraryhub-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "462096274659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rds-sg",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rds-sg",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_ec2",
            "module.security_groups.aws_security_group.beanstalk",
            "module.security_groups.aws_security_group.ec2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f273496385c76a8",
            "arn": "arn:aws:ec2:us-east-1:462096274659:elastic-ip/eipalloc-00f273496385c76a8",
            "association_id": "eipassoc-008c3845ebe348830",
            "domain": "vpc",
            "id": "eipalloc-00f273496385c76a8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e69dca8d2be5db57",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-34-206-251-233.compute-1.amazonaws.com",
            "public_ip": "34.206.251.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-eip-1",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-eip-1",
              "Project": "libraryhub"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a89efc3001cd728e",
            "arn": "arn:aws:ec2:us-east-1:462096274659:elastic-ip/eipalloc-0a89efc3001cd728e",
            "association_id": "eipassoc-060dcfd376d5e0c1c",
            "domain": "vpc",
            "id": "eipalloc-0a89efc3001cd728e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-049d4a50d3ab912c5",
            "private_dns": "ip-10-0-2-166.ec2.internal",
            "private_ip": "10.0.2.166",
            "public_dns": "ec2-32-199-84-221.compute-1.amazonaws.com",
            "public_ip": "32.199.84.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-eip-2",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-eip-2",
              "Project": "libraryhub"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:internet-gateway/igw-03391d636c09f16ed",
            "id": "igw-03391d636c09f16ed",
            "owner_id": "462096274659",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-igw",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-igw",
              "Project": "libraryhub"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f273496385c76a8",
            "association_id": "eipassoc-008c3845ebe348830",
            "connectivity_type": "public",
            "id": "nat-0773fbd6135e68b39",
            "network_interface_id": "eni-0e69dca8d2be5db57",
            "private_ip": "10.0.1.8",
            "public_ip": "34.206.251.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003dcb21ec3441a2a",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-1",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-1",
              "Project": "libraryhub"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a89efc3001cd728e",
            "association_id": "eipassoc-060dcfd376d5e0c1c",
            "connectivity_type": "public",
            "id": "nat-0609922b3e2e8aae2",
            "network_interface_id": "eni-049d4a50d3ab912c5",
            "private_ip": "10.0.2.166",
            "public_ip": "32.199.84.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4c24841e2bb5310",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-2",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-nat-2",
              "Project": "libraryhub"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:route-table/rtb-0701c93168241276c",
            "id": "rtb-0701c93168241276c",
            "owner_id": "462096274659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0773fbd6135e68b39",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-app-1",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-app-1",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:route-table/rtb-0f0e0dcca5b2618e4",
            "id": "rtb-0f0e0dcca5b2618e4",
            "owner_id": "462096274659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0609922b3e2e8aae2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-app-2",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-app-2",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:route-table/rtb-044454a0144dcde47",
            "id": "rtb-044454a0144dcde47",
            "owner_id": "462096274659",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-db",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-db",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:route-table/rtb-07332da23113190cf",
            "id": "rtb-07332da23113190cf",
            "owner_id": "462096274659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03391d636c09f16ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-public",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-rt-public",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5a528920eb51406",
            "route_table_id": "rtb-0701c93168241276c",
            "subnet_id": "subnet-0db8fb1c589380b75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d38798e87084f613",
            "route_table_id": "rtb-0f0e0dcca5b2618e4",
            "subnet_id": "subnet-06c388169215cf5a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb6fb92f526fd4a6",
            "route_table_id": "rtb-044454a0144dcde47",
            "subnet_id": "subnet-056e5d9c23db424e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_db",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dc18d83aabecabd",
            "route_table_id": "rtb-044454a0144dcde47",
            "subnet_id": "subnet-09d961bae527b132d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_db",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093f912fec893d76d",
            "route_table_id": "rtb-07332da23113190cf",
            "subnet_id": "subnet-003dcb21ec3441a2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023c27510b80f9dba",
            "route_table_id": "rtb-07332da23113190cf",
            "subnet_id": "subnet-0b4c24841e2bb5310"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:security-group/sg-075ff7a4cb1e975b9",
            "description": "Allow HTTPS from private subnets to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075ff7a4cb1e975b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "libraryhub-prod-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "462096274659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-vpc-endpoints-sg",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-vpc-endpoints-sg",
              "Project": "libraryhub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:subnet/subnet-0db8fb1c589380b75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db8fb1c589380b75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462096274659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-app-1",
              "Project": "libraryhub",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-app-1",
              "Project": "libraryhub",
              "Tier": "app"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:subnet/subnet-06c388169215cf5a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c388169215cf5a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462096274659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-app-2",
              "Project": "libraryhub",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-app-2",
              "Project": "libraryhub",
              "Tier": "app"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:subnet/subnet-056e5d9c23db424e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056e5d9c23db424e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462096274659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-db-1",
              "Project": "libraryhub",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-db-1",
              "Project": "libraryhub",
              "Tier": "db"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:subnet/subnet-09d961bae527b132d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d961bae527b132d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462096274659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-db-2",
              "Project": "libraryhub",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-db-2",
              "Project": "libraryhub",
              "Tier": "db"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:subnet/subnet-003dcb21ec3441a2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003dcb21ec3441a2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462096274659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-public-1",
              "Project": "libraryhub",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-public-1",
              "Project": "libraryhub",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:subnet/subnet-0b4c24841e2bb5310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4c24841e2bb5310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462096274659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-public-2",
              "Project": "libraryhub",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-public-2",
              "Project": "libraryhub",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:vpc/vpc-0d98eb987fe8a01f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072950d5606b9a3c9",
            "default_route_table_id": "rtb-0cc2affd032c5cf68",
            "default_security_group_id": "sg-0a58bae31e9699ada",
            "dhcp_options_id": "dopt-0a633eaf6942059f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d98eb987fe8a01f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc2affd032c5cf68",
            "owner_id": "462096274659",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-vpc",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-vpc",
              "Project": "libraryhub"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:vpc-endpoint/vpce-03d9373fb78bf67a3",
            "dns_entry": [
              {
                "dns_name": "vpce-03d9373fb78bf67a3-kwibwzpo.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03d9373fb78bf67a3-kwibwzpo-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03d9373fb78bf67a3-kwibwzpo-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0847029IKKMK6I2J6N8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03d9373fb78bf67a3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b7b254e56a1fb5f",
              "eni-07ef236eefeb16c2a"
            ],
            "owner_id": "462096274659",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075ff7a4cb1e975b9"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.151",
                "subnet_id": "subnet-0db8fb1c589380b75"
              },
              {
                "ipv4": "10.0.11.121",
                "subnet_id": "subnet-06c388169215cf5a9"
              }
            ],
            "subnet_ids": [
              "subnet-06c388169215cf5a9",
              "subnet-0db8fb1c589380b75"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2messages-endpoint",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ec2messages-endpoint",
              "Project": "libraryhub"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:vpc-endpoint/vpce-06c8804cded963a80",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06c8804cded963a80",
            "ip_address_type": "ipv4",
            "owner_id": "462096274659",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0701c93168241276c",
              "rtb-0f0e0dcca5b2618e4"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-s3-endpoint",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-s3-endpoint",
              "Project": "libraryhub"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:vpc-endpoint/vpce-04c77ab1bca699d6e",
            "dns_entry": [
              {
                "dns_name": "vpce-04c77ab1bca699d6e-63y8sq3z.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04c77ab1bca699d6e-63y8sq3z-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04c77ab1bca699d6e-63y8sq3z-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08236452U49KN0GYDF0K"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z070348636MW65BQRZIBM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04c77ab1bca699d6e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0368164a6836f3df2",
              "eni-09c1d78d8d855bcdc"
            ],
            "owner_id": "462096274659",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075ff7a4cb1e975b9"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.208",
                "subnet_id": "subnet-0db8fb1c589380b75"
              },
              {
                "ipv4": "10.0.11.10",
                "subnet_id": "subnet-06c388169215cf5a9"
              }
            ],
            "subnet_ids": [
              "subnet-06c388169215cf5a9",
              "subnet-0db8fb1c589380b75"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ssm-endpoint",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ssm-endpoint",
              "Project": "libraryhub"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462096274659:vpc-endpoint/vpce-0661263f34c19da03",
            "dns_entry": [
              {
                "dns_name": "vpce-0661263f34c19da03-8pklgie9.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0661263f34c19da03-8pklgie9-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0661263f34c19da03-8pklgie9-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06625372EDS263DEWVDP"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z069647617JTZVZ56409N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0661263f34c19da03",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08b62f67aa66488a6",
              "eni-0de29214a8f9fe488"
            ],
            "owner_id": "462096274659",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075ff7a4cb1e975b9"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.42",
                "subnet_id": "subnet-0db8fb1c589380b75"
              },
              {
                "ipv4": "10.0.11.116",
                "subnet_id": "subnet-06c388169215cf5a9"
              }
            ],
            "subnet_ids": [
              "subnet-06c388169215cf5a9",
              "subnet-0db8fb1c589380b75"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ssmmessages-endpoint",
              "Project": "libraryhub"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "libraryhub-prod-ssmmessages-endpoint",
              "Project": "libraryhub"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d98eb987fe8a01f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}